# greeter

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
greeter-async-std/: Cargo.toml
greeter-async-std/src/: main.rs
greeter-glommio/: Cargo.toml
greeter-glommio/src/: main.rs
greeter-minimum/: Cargo.toml
greeter-minimum/src/: main.rs  runtime.rs
greeter-noasync/: Cargo.toml
greeter-noasync/src/: main.rs
greeter-smol/: Cargo.toml
greeter-smol/src/: main.rs
greeter-tokio/: Cargo.toml
greeter-tokio/src/: main.rs
proto/: Cargo.toml
proto/src/: client.rs  helloworld.rs  lib.rs
src/: helloworld.rs  main.rs  runtime.rs
