[package]
name = "greeter-async-std"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path="../proto" }
async-std = "1.9"
socket2 = {version="0.3", features = ["reuseport"]}
nix = "0.18"
async-compat = "0.2"
