[package]
name = "greeter-glommio"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path="../proto" }
glommio = { git = "https://github.com/DataDog/glommio", rev = "0a77c69" }
async-compat = "0.2"
num_cpus = "1.0"
