[package]
name = "greeter-minimum"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path="../proto" }
mio = { version="0.7", features = ["os-poll","tcp"] }
socket2 = { version="0.3", features = ["reuseport"] }
num_cpus = "1.0"
core_affinity = "0.5"
nix = "0.18"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
