[package]
name = "greeter-minimum"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path="../proto" }
num_cpus = "1.0"
core_affinity = "0.5"
nix = "0.18"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
rustc-hash = "1"
libc = "0.2"
iou = "0.3"
uring-sys = "0.7"
clap = "2.0"
polling = "2.0.2"
pin-utils = "0.1"
waker-fn = "1"
