[package]
name = "greeter-smol"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = {version="0.3", features = ["reuseport"]}
nix = "0.18"
futures = "0.3"
futures-util = "0.3"
proto = {path="../proto"}
tokio = { version = "1", features = ["full"] }
smol = "1.2"
async-compat = "0.2"
num_cpus = "1.0"
