[package]
name = "proto"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version="0.7", features = ["os-poll","tcp"]}
socket2 = {version="0.3.18", features = ["reuseport"]}
solicit = { git = "https://github.com/mlalic/solicit", rev = "fdccb36" }
slice_as_array = "1.0"
hpack = "0.3"
quick-protobuf = "0.7"
num_cpus = "1.0"
core_affinity = "0.5"
lazy_static = "1.4"
nix = "0.18"
byteorder = "1.3.2"
thiserror = "1.0"
bytes = "0.5"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
